# rtr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  assimp_import.cpp  assimp_import.hpp  camera.cpp  camera.hpp  ibl.sh  lights.hpp  main.cpp  material.cpp  material.hpp  merge_ibl.cpp  meta_list.hpp  render_configs.hpp  rtr_config.hpp  rtr_fwd.hpp  scene.cpp  scene.hpp  scene_conv.py  shapes.hpp  static_storage.cpp  transform.hpp  utility.cpp  utility.hpp  vertex.hpp  xml_parse.cpp  xml_parse.hpp
brdf/: blinn_phong_brdf.cpp  blinn_phong_brdf.hpp  brdf_common.hpp  phong_brdf.cpp  phong_brdf.hpp  torrance_sparrow.cpp  torrance_sparrow.hpp
cmake_modules/: FindOpenEXR.cmake  FindSSE.cmake  FindSpdlog.cmake  FindTBB.cmake  FindTinyXML2.cmake  Findassimp.cmake
geometry/: mesh.cpp  mesh.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
gil_extension/exr/detail/: color_space_traits.cpp  color_space_traits.hpp  exr_reader.hpp
lights/: ambient_light.hpp  area_light.hpp  directional_light.hpp  point_light.hpp  spot_light.hpp
materials/: brdf_mat.cpp  brdf_mat.hpp  bump.cpp  bump.hpp  glass.cpp  glass.h  illuminating.cpp  illuminating.hpp  material.cpp  material.hpp  metal.cpp  metal.hpp  mirror_material.cpp  mirror_material.h  normal_mat.cpp  normal_mat.hpp  rt_mat.cpp  rt_mat.hpp  shading_ctx.hpp  skybox.cpp  skybox.hpp  toon_shading.cpp  toon_shading.hpp
ninja_build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  ray  rules.ninja
physics/: aabb.hpp  aabb_tri_intersect.cpp  bvh.hpp  collision.cpp  collision.hpp  octree.cpp  octree.hpp  ray.cpp  ray.hpp
scene_transform/: transform.py
shapes/: mesh.cpp  mesh.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
tests/: tests_main.cpp
tests/physics/: bvh_tests.cpp  collisions.cpp
texturing/: perlin2d.cpp  perlin2d.hpp  sampler.cpp  sampler.hpp  tex2d.cpp  tex2d.hpp
transform/: transform.cpp  transform.hpp
